# Clew

./: .gitignore  DOC_NOTES  LICENSE  Makefile.am  README.md  configure.ac  configureScript
beeline-latency/: .gitignore
beeline-latency/src/: log_beeline_latency.in  log_remote_beeline_latency.in  query_beeline_latency.in
dashboard/: config.yml.template  config_utils.R  restart.txt  server.R  tabBox.tabpanel.BeelineLatencyObj.R  tabBox.tabpanel.DashboardObj.R  tabBox.tabpanel.HistServerObj.R  tabBox.tabpanel.MetricsObj.R  tabBox.tabpanel.QueueWaitObj.R  tabBox.tabpanel.YarnMonObj.R  ui.R
docker/: Makefile  docker-compose.yml
docker/hive-server/: Dockerfile  docker_user_bashrc
docker/hive-server/conf/: hdfs-site.xml  supervisord.conf  yarn-site.xml
docker/hive-server/test_mr/: mapper.py  reducer.py  runJob  zoo.csv
docker/monitorgateway/: Dockerfile
docker/monitorgateway/conf/: ssh.conf  supervisord.conf
docker/monitorgateway/scripts/: createMySQLTable  runMySQLQuery  start.sh
